// wallets.proto
syntax = "proto3";

package wallets;

message GetBalanceRequest {
  string user_id = 1;
}

message BalanceResponse {
  double balance = 1;
}

message WalletTransaction {
  string user_id = 1;
  double amount = 2;
}

message TransactionResponse {
  double reference_id = 1;
}

service WalletService {
  rpc GetBalance (GetBalanceRequest) returns (BalanceResponse) {}
  rpc UpdateBalance (WalletTransaction) returns (TransactionResponse) {}
}
